<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.djdemocracy.MainActivity$PlaceholderFragment" 
    android:id="@+id/login">

    <LinearLayout 
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:orientation="horizontal">
	    <ImageView 
	    android:contentDescription="logo"
	    android:id="@+id/logo"
	    android:adjustViewBounds="true"
	    android:layout_height="wrap_content"
		android:layout_width="wrap_content"
	    android:src="@drawable/logo"    
	    android:layout_gravity="left"
	    android:layout_weight=".85"
	    />
	    <ImageView 
	    android:contentDescription="menu"
	    android:id="@+id/menu"
	    android:adjustViewBounds="true"
	    android:layout_height="wrap_content"
		android:layout_width="wrap_content"
	    android:src="@drawable/menu"    
	    android:layout_gravity="right"
	    android:layout_weight=".15"
	    android:onClick="menu"
	    />
    </LinearLayout>
    
	<TextView
	android:id="@+id/first"
	android:labelFor="@+id/user"
	android:text="@string/user"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_below="@id/header" 
	/>
     <EditText
    android:id="@+id/user"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:layout_below="@id/first" 
    />
     
	<TextView
	android:id="@+id/second"
	android:labelFor="@+id/password"
	android:text="@string/password"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_below="@id/user"
	/>
    <EditText
    android:id="@+id/password"
    android:imeActionLabel="@string/password"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword" 
    android:layout_below="@id/second"/>
    
    <Button
     android:id="@+id/submit"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/submit"
     android:layout_below="@id/password"
     android:layout_centerHorizontal="true"
     android:onClick="login"
     />
    
     <Button
     android:id="@+id/create"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:layout_width="wrap_content"
     android:text="@string/create"
     android:layout_below="@id/submit"
     android:layout_centerHorizontal="true"
     android:layout_alignParentBottom="true"
     android:onClick="test"
     />

</RelativeLayout>
